task5/apps/4_case3/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  type: NodePort
  selector:
    app: movie-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
      nodePort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  type: NodePort
  selector:
    app: ticket-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
      nodePort: 30003
