task5/apps/4_case3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ticket-booking-ingress
spec:
  rules:
  - host: movie-ticket-booking.local
    http:
      paths:
      - path: /movies
        pathType: Prefix
        backend:
          service:
            name: movie-service
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /order_ticket
        pathType: Prefix
        backend:
          service:
            name: ticket-service
            port:
              number: 80
